<resources>
    <string name="app_name">Tencil</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Register &amp; Control Your Future Today!</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="title_activity_login">Test</string>
    <string name="prompt_email" />
    <string name="prompt_password" />
    <string name="action_sign_in_short" />
    <string-array name="location">
        <item>Wales</item>
        <item>England</item>
        <item>Scotland</item>
        <item>Northern Ireland</item>
        <item>Other</item>
    </string-array>
    <string-array name="age">
        <item>14 – 15</item>
        <item>15 – 16</item>
        <item>16 – 17</item>
        <item>18+</item>
        <item>Prefer Not To Say</item>
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Transgender</item>
        <item>Non-Binary</item>
        <item>Prefer Not To Say</item>

    </string-array>
    <string-array name="ethnic">
        <item>White</item>
        <item>Gypsy</item>
        <item>Asian</item>
        <item>Black</item>
        <item>Mixed Race</item>
        <item>Other</item>
        <item>Prefer Not To Say</item>

    </string-array>
    <string-array name="subjects">
        <item>Humanities</item>
        <item>Sciences</item>
        <item>Social Sciences</item>
        <item>Languages</item>
        <item>Mathematics</item>

    </string-array>
    <string-array name="hobbies">
        <item>Sports</item>
        <item>Social Media</item>
        <item>Music</item>
        <item>Gaming</item>
        <item>Technology</item>
        <item>Arts and Design</item>
        <item>Other</item>

    </string-array>
    <string-array name="sports">
        <item>Rugby</item>
        <item>Football</item>
        <item>Cricket</item>
        <item>Golf</item>
        <item>Hiking</item>
        <item>Swimming</item>
        <item>Ballet</item>
        <item>Other</item>

    </string-array>
    <string-array name="smedia">
        <item>Facebook</item>
        <item>Twitter</item>
        <item>TikTok</item>
        <item>Instagram</item>
        <item>Snapchat</item>
        <item>Youtube</item>
        <item>Linkedin</item>
        <item>Other</item>

    </string-array>
    <string-array name="genre">
        <item>Hip Hop</item>
        <item>Pop Music</item>
        <item>House Music</item>
        <item>Techno</item>
        <item>Jazz</item>
        <item>Rock</item>
        <item>Heavy Metal</item>
        <item>Other</item>

    </string-array>
    <string-array name="console">
        <item>Playstation</item>
        <item>Xbox</item>
        <item>PC</item>
        <item>Nintendo</item>
        <item>Other</item>
        <item>None</item>


    </string-array>
    <string-array name="statement">
        <item>I Am Passionate About My Work.</item>
        <item>I Am Highly Organised.</item>
        <item>I Am Ambitious And Driven</item>
        <item>I am a People Person</item>
        <item>Im a Natural Leader</item>
        <item>I am Results Orientated</item>


    </string-array>
    <string-array name="school">
        <item>University</item>
        <item>Apprenticeship </item>
        <item>Full-Time Work</item>
        <item>Part-Time Work</item>
        <item>Travelling</item>
        <item>Other</item>

    </string-array>
    <string name="careers">Careers</string>
    <string name="tencil">Welcome To Tencil</string>
    <string name="textview">TextView</string>
    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>
    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display specific or all related shops to match your search. </string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform bookings as well.</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by follwing simple steps.</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you dont have to worry about anything.  </string>
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">NEXT</string>
    <string name="question_1">Question 1</string>
    <string name="question_2">Question 2</string>
    <string name="question_3">Question 3</string>
    <string name="question_4">Question 4</string>
    <string name="question_5">Question 5</string>
    <string name="question_6">Question 6</string>
    <string name="question_7">Question 7</string>
    <string name="question_8">Question 8</string>
    <string name="question_9">Question 9</string>
    <string name="question_10">Question 10</string>
    <string name="question_11">Question 11</string>
    <string name="question_12">Question 12</string>
    <string name="question_13">Question 13</string>
    <string name="where_do_you_live">Where Do You Live?</string>
    <string name="how_old_are_you">How Old Are You?</string>
    <string name="what_gender_are_you">What Gender Are You?</string>
    <string name="what_ethnic_group_best_describes_you">What Ethic Group Best Describes You? </string>
    <string name="what_is_your_favourite_subjects">What Is Your Favourite Subjects</string>
    <string name="what_is_your_hobbies">What Is Your Favourite Hobby?</string>
    <string name="what_is_your_sport">What Is Your Favourite Sport?</string>
    <string name="what_is_your_social_media">What Is Your Favourite Social Media?</string>
    <string name="what_is_your_genre">What Is Your Favourite Music Genre?</string>
    <string name="what_is_your_console">What Is Your Favourite Console?</string>
    <string name="what_is_your_statement">What statement best describes you?</string>
    <string name="what_is_your_school">What do you want to do after you leave school?</string>
    <string name="what_is_your_career">What Career Are You Most Interested In?</string>
    <string name="hello_world">Hello World</string>
    <string name="discoverimg">discoverimg</string>
    <string name="welcome_to_tencil">Dashboard</string>
    <string name="category_1">Category 1</string>
    <string name="category_2">Category 2</string>
    <string name="category_3">Category 3</string>
    <string name="category_6">Category 6</string>
    <string name="category_one">Category One</string>
    <string name="category_two">Category Two</string>
    <string name="category_three">Category Three</string>
    <string name="category_four">Category Four</string>
    <string name="category_five">Category Five</string>
    <string name="category_six">Category Six</string>
    <string name="category_seven">Category Seven</string>
    <string name="category_eight">Category Eight</string>
    <string name="category_nine">Category Nine</string>
    <string name="category_ten">Category Ten</string>
    <string name="company1">Company1</string>
    <string name="expand_all">Expand All</string>
    <string name="providence_web_services">Providence Web Services</string>
    <string name="businesses">Businesses</string>
    <string name="food">Food</string>
    <string name="home">Home</string>
    <string name="industries">Industries</string>
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="rateus">Rate Us</string>
    <string name="share">Share</string>
    <string name="menu_slogan">Change Your Future</string>
    <string name="powered_by">Powered By Providence Web Services</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_to_explore_our_world">Login To Explore Our World</string>
    <string name="finish">FINISH</string>
    <string name="skip">Skip</string>
    <string name="click_to_register">Click Here to Register</string>
    <string name="click_to_login">Click Here To Login</string>
    <string name="tech">Tech Companies</string>
    <string name="fintech">FinTech Companies</string>
    <string name="finance">Finance Companies</string>
    <string name="socialmedis">Social Media</string>
    <string name="featured_companies">All Featured Companies</string>
    <string name="featured_companies_description">All the featured companies have a top demand in your area!</string>
    <string name="most_viewed_companies">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View all</string>
    <string name="search_text">Search…</string>
    <string name="See_More">See More</string>
    <string name="category_coding">Coding Category</string>
    <string name="category_comscompany">Communication Company Category</string>
    <string name="category_consultancy">Consultancy</string>
    <string name="category_edtech">EdTech</string>
    <string name="category_fintech">FinTech</string>
    <string name="category_it">IT</string>
    <string name="category_lawtech">Lawtech</string>
    <string name="category_other">Other</string>
    <string name="category_proptech">Proptech</string>
    <string name="business1">Business #1</string>
    <string name="goback">GoBack</string>
    <string name="business_name">Business Name</string>
    <string name="we_are_a_small_business">We Are a Small Business</string>
    <string name="provide_desc">We are a local and budget friendly business that provides unique websites, up to date social media advertising to attract new customers and we also offer unique media packages that will suit your business needs.</string>
    <string name="resources">Resources</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="website">Website</string>
    <string name="businessesall">All Businesses</string>
    <string name="contact">Contact</string>
    <string name="want_to_be_a_featured_business">Want to be a featured Business?</string>
    <string name="BT">BT</string>
    <string name="vodafone">Vodafone</string>
    <string name="talk_talk">Talk Talk</string>
    <string name="category_finance">Finance Category</string>
    <string name="backnavigation">backnavigation</string>
    <string name="test">Test Company</string>
    <string name="MoneyFarm">Money Farm</string>
    <string name="resend_code">Resend Code</string>
    <string name="activate">Activate</string>
    <string name="activation_code">Activation code</string>
    <string name="enter_the_activation_code_below">Enter the Activation code below</string>
    <string name="activate_account">Activate Account</string>
    <string name="full_name">Full Name</string>
    <string name="ryan">Ryan</string>
    <string name="update_details">Update Details</string>
    <string name="want_to_edit_your_details">Want to Edit your details?</string>
    <string name="ryan_kimber97_gmail_com">ryan.kimber97@gmail.com</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>