<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />


    </group>

    <item android:title="@string/share">
        <menu>
            <group android:checkableBehavior="none">

                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/shar"
                    android:title="@string/share" />

                <item4

                    android:id="@+id/nav_rateus"
                    android:icon="@drawable/rateus"
                    android:title="@string/rateus" />
            </group>


        </menu>

    </item>

    <item android:title="Legal">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/legal"
                    android:icon="@drawable/insurance"
                    android:title="@string/privacy_policy" />
            </group>


        </menu>

    </item>
    <item android:title="Profile">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_user"
                    android:title="Profile" />
                <item
                    android:id="@+id/nav_qs"
                    android:icon="@drawable/help"
                    android:title="Questions" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/general_back_icon"
                    android:title="@string/logout" />
            </group>


        </menu>

    </item>
    <item android:title="Technical">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_technical"
                    android:icon="@drawable/settings"
                    android:title="Status Page" />

            </group>


        </menu>

    </item>
</menu>