<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.co.tencil.Activate">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageView
            android:id="@+id/activate_dash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="activate_dash"
            android:padding="15dp"
            android:src="@drawable/general_back_icon" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/activateemail"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="80dp"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/activate_account"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/activateemail"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/enter_the_activation_code_below"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/activateemail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/activatecode"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:background="@drawable/et_custom"
        android:drawableEnd="@drawable/ic_user"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/activatecode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/et_custom"
        android:drawableEnd="@drawable/ic_baseline_fiber_pin_24"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/activation_code"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp"
        app:passwordToggleEnabled="true" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_activate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activatecode"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="#14b9d5"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/activate"
        android:textColor="@android:color/white" />


    <Button
        android:id="@+id/resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/roboto_regular"
        android:onClick="resendTO"
        android:text="@string/resend_code"
        android:textAllCaps="true"
        android:textColor="#fff"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="20dp" />

</RelativeLayout>