<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".fintechCompany">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/white"
            android:backgroundTint="@color/white">

            <ImageView
                android:id="@+id/back_dash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/backnavigation"
                android:onClick="ryanNav"
                android:padding="15dp"
                android:src="@drawable/general_back_icon" />


        </RelativeLayout>

        <TextView
            android:id="@+id/dafyddtest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/fintech"
            android:textAlignment="center"
            android:textSize="36sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/card_4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/MoneyFarm"
                    android:textColor="#fff"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/see_more1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:backgroundTint="#00000000"
                    android:onClick="seemore1"
                    android:padding="20dp"
                    android:text="@string/See_More"
                    android:textColor="#fff"
                    android:textStyle="bold" />


            </RelativeLayout>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="false"
                android:layout_marginStart="190dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/moneyfarm" />


        </RelativeLayout>




    </LinearLayout>


</ScrollView>