<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AllBusinesses">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <ImageView
                android:id="@+id/back_dash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:src="@drawable/general_back_icon" />



        </RelativeLayout>

        <TextView
            android:id="@+id/dafyddtest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/businessesall"
            android:textSize="36sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:background="@drawable/categories_restaurant_background">

                <TextView
                    android:id="@+id/business_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/providence_web_services"
                    android:textColor="#fff"
                    android:textSize="15sp"
                    android:textStyle="bold" />


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:backgroundTint="#00000000"
                    android:padding="20dp"
                    android:id="@+id/see_more1"
                    android:textColor="#fff"
                    android:text="@string/See_More"
                    android:textStyle="bold" />


            </RelativeLayout>

            <ImageView
                android:id="@+id/categories_logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="-20dp"
                android:src="@drawable/pws" />


        </RelativeLayout>


    </LinearLayout>


</ScrollView>